k8s/sonarqube/03-sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:9.9-community
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              cpu: "800m"
              memory: "2Gi"
          volumeMounts:
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
          readinessProbe:
            httpGet:
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 15
          livenessProbe:
            httpGet:
              path: /api/system/status
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
            failureThreshold: 5

      volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  type: ClusterIP
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
